; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/pdh/extr_pdh_main.c_pdh_strdup.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/pdh/extr_pdh_main.c_pdh_strdup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @pdh_strdup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @pdh_strdup(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %23

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @strlenW(i32* %9)
  %11 = add nsw i32 %10, 1
  %12 = sext i32 %11 to i64
  %13 = mul i64 %12, 4
  %14 = trunc i64 %13 to i32
  %15 = call i32* @heap_alloc(i32 %14)
  store i32* %15, i32** %4, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %8
  %18 = load i32*, i32** %4, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @strcpyW(i32* %18, i32* %19)
  br label %21

21:                                               ; preds = %17, %8
  %22 = load i32*, i32** %4, align 8
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %21, %7
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i32* @heap_alloc(i32) #1

declare dso_local i32 @strlenW(i32*) #1

declare dso_local i32 @strcpyW(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
